[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-tool"
version = "1.0.0"
description = "A file encryptor/decryptor CLI tool using AES-256-GCM and RSA hybrid encryption"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "manggaladev", email = "manggaladev@users.noreply.github.com"}
]
keywords = ["cryptography", "encryption", "aes", "rsa", "file-encryption", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
dependencies = [
    "cryptography>=42.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
gui = [
    "tkinter-tooltip>=2.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
crypto-tool = "crypto_tool.cli:main"

[project.urls]
Homepage = "https://github.com/manggaladev/crypto-tool"
Repository = "https://github.com/manggaladev/crypto-tool"
Issues = "https://github.com/manggaladev/crypto-tool/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["crypto_tool*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
